@@ -10,6 +10,7 @@ version ? (????-??-??):
   - lmsd/hostfile: fixed 'excluded_customergroups' option query (alec)
   - fixed stats compacting (alec)
   - added division filter on Customers List (alec)
+  - modified division selector (using multiselect) in numberplans (alec)
 
 version 1.11.7 Bastet (2009-02-13):
 
